# kawaiicon-irc

./: Cargo.toml  README.md  chcon.html  package-lock.json  package.json  sample.html  serverless.yml
src/: cal.rs  main.rs  parser.rs  parser_chcon.rs
