[package]
name = "kawaiicon-ics"
version = "0.1.0"
authors = ["Jamie McClymont <jamie@kwiius.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
failure = "0.1.6"
reqwest = "0.9.22"
scraper = "0.11.0"
chrono = "0.4.9"
ics = "0.4.1"
lazy_static = "1.4.0"
chrono-tz = "0.5.1"
uuid = { version = "0.7.4", features = ["v5"] }
